glib: check if words end with spaces

poppler_page_get_text_layout and poppler_page_get_text_attributes
assume that each word ends with a space or newline, causing them to
become mismatched from the text.  This adds a check to
TextWord::getSpaceAfter.

https://bugs.freedesktop.org/show_bug.cgi?id=54504